[gd_scene load_steps=17 format=3 uid="uid://bbkmj8wgvwimx"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_j83vd"]
[ext_resource type="Texture2D" uid="uid://dsmt40wai14qy" path="res://assent/Menu.jpg" id="2_g7qvh"]
[ext_resource type="Texture2D" uid="uid://cwalg3q6phhrx" path="res://assent/medium.png" id="3_66rt0"]
[ext_resource type="Texture2D" uid="uid://cw1owyjkviwo8" path="res://assent/closed.png" id="3_b3lnt"]
[ext_resource type="FontFile" uid="uid://eclxogxyxgsx" path="res://font/Silver.ttf" id="3_oyb24"]
[ext_resource type="StyleBox" uid="uid://bhtxhfetoawoi" path="res://scene/button_focus.tres" id="4_g8qju"]
[ext_resource type="AudioStream" uid="uid://bqgjbnhhemfs5" path="res://sfx/Retro3.ogg" id="7_g5hmg"]
[ext_resource type="AudioStream" uid="uid://pmdjk4lmruwh" path="res://sfx/Retro8.ogg" id="8_f00c6"]
[ext_resource type="AudioStream" uid="uid://dg2wodnv0r537" path="res://sfx/Demons and Death - Menu.mp3" id="9_yiftw"]
[ext_resource type="FontFile" uid="uid://balhb42drx84j" path="res://font/GODOFWAR.TTF" id="10_thnub"]

[sub_resource type="ImageTexture" id="ImageTexture_4lly4"]

[sub_resource type="ImageTexture" id="ImageTexture_aofxq"]

[sub_resource type="ImageTexture" id="ImageTexture_et4sp"]

[sub_resource type="ImageTexture" id="ImageTexture_yo11m"]

[sub_resource type="Animation" id="Animation_3einp"]
resource_name = "new_animation"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBoxContainer/Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VBoxContainer/StartButton:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("VBoxContainer/OptionButon:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("VBoxContainer/ExistButton:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("VBoxContainer/Sprite2D:region_rect")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Rect2(0, 0, 1056, 384), Rect2(0, 0, 1056, 500), Rect2(0, 0, 1056, 600), Rect2(0, 0, 1056, 700), Rect2(0, 0, 1056, 800), Rect2(0, 0, 1056, 900), Rect2(0, 0, 1056, 1000), Rect2(0, 0, 1056, 1384)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("VBoxContainer/Sprite2D2:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/6/type = "method"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.8),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_ready"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_27ogm"]
_data = {
"new_animation": SubResource("Animation_3einp")
}

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_j83vd")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(398.5, 300.5)
scale = Vector2(1.02436, 1.11546)
texture = ExtResource("2_g7qvh")

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 103.0
offset_top = 355.0
offset_right = -591.0
offset_bottom = -152.0
grow_horizontal = 2
grow_vertical = 2

[node name="Sprite2D" type="Sprite2D" parent="VBoxContainer2"]
position = Vector2(52, 30)
scale = Vector2(0.0965645, 0.0773085)
texture = ExtResource("3_66rt0")

[node name="Button" type="CheckButton" parent="VBoxContainer2"]
texture_filter = 1
texture_repeat = 1
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_left = NodePath("../../VBoxContainer/OptionButon")
mouse_filter = 2
mouse_default_cursor_shape = 8
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0.843137, 0, 0.85098)
theme_override_constants/h_separation = 0
theme_override_constants/check_v_offset = -2
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("3_oyb24")
theme_override_font_sizes/font_size = 19
theme_override_icons/checked = SubResource("ImageTexture_4lly4")
theme_override_icons/checked_disabled = SubResource("ImageTexture_aofxq")
theme_override_icons/unchecked = SubResource("ImageTexture_et4sp")
theme_override_icons/unchecked_disabled = SubResource("ImageTexture_yo11m")
theme_override_styles/focus = ExtResource("4_g8qju")
text = "INVINCIBLE"

[node name="Button2" type="Button" parent="VBoxContainer2"]
texture_filter = 1
texture_repeat = 1
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
mouse_default_cursor_shape = 8
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0.843137, 0, 0.709804)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("3_oyb24")
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = ExtResource("4_g8qju")
text = "CREDITOS"
flat = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
texture_filter = 1
texture_repeat = 1
layout_direction = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 36.0
offset_top = 324.0
offset_right = -708.0
offset_bottom = -173.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="Sprite2D2" type="Sprite2D" parent="VBoxContainer"]
visible = false
position = Vector2(-19, -51)
scale = Vector2(0.0786517, 0.15)
texture = ExtResource("3_b3lnt")
centered = false

[node name="Sprite2D" type="Sprite2D" parent="VBoxContainer"]
position = Vector2(-20, -51)
scale = Vector2(0.086351, 0.15)
texture = ExtResource("3_66rt0")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 1056, 1384)

[node name="StartButton" type="Button" parent="VBoxContainer"]
texture_filter = 1
texture_repeat = 1
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
focus_neighbor_top = NodePath("../ExistButton")
mouse_filter = 2
mouse_default_cursor_shape = 8
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0.905882, 0, 0.72549)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("3_oyb24")
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = ExtResource("4_g8qju")
text = "START"
flat = true
icon_alignment = 1

[node name="OptionButon" type="Button" parent="VBoxContainer"]
texture_filter = 1
texture_repeat = 1
clip_contents = true
layout_direction = 1
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
mouse_filter = 2
mouse_default_cursor_shape = 8
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0.905882, 0, 0.72549)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("3_oyb24")
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = ExtResource("4_g8qju")
text = "OPTIONS"
flat = true
icon_alignment = 1

[node name="ExistButton" type="Button" parent="VBoxContainer"]
texture_filter = 1
texture_repeat = 1
layout_direction = 1
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
focus_neighbor_bottom = NodePath("../StartButton")
mouse_filter = 2
mouse_default_cursor_shape = 8
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0.905882, 0, 0.72549)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("3_oyb24")
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = ExtResource("4_g8qju")
text = "QUIT"
flat = true
icon_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "new_animation"
libraries = {
"": SubResource("AnimationLibrary_27ogm")
}

[node name="focus" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_g5hmg")

[node name="pressed" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_f00c6")

[node name="Menu" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_yiftw")
autoplay = true

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 498.0
offset_top = 184.0
offset_right = 862.0
offset_bottom = 382.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("10_thnub")
theme_override_font_sizes/font_size = 15
text = "move: arrows

fire: CTRL

melee: space

rain arrow: A

power Beam: D

roll: down and left or right "
vertical_alignment = 1
autowrap_mode = 2
uppercase = true

[connection signal="focus_entered" from="VBoxContainer2/Button" to="." method="_on_button_focus_entered"]
[connection signal="pressed" from="VBoxContainer2/Button" to="." method="_on_button_pressed"]
[connection signal="focus_entered" from="VBoxContainer2/Button2" to="." method="_on_button_2_focus_entered"]
[connection signal="pressed" from="VBoxContainer2/Button2" to="." method="_on_button_2_pressed"]
[connection signal="focus_entered" from="VBoxContainer/StartButton" to="." method="_on_start_button_focus_entered"]
[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="focus_entered" from="VBoxContainer/OptionButon" to="." method="_on_option_buton_focus_entered"]
[connection signal="pressed" from="VBoxContainer/OptionButon" to="." method="_on_option_buton_pressed"]
[connection signal="focus_entered" from="VBoxContainer/ExistButton" to="." method="_on_exist_button_focus_entered"]
[connection signal="pressed" from="VBoxContainer/ExistButton" to="." method="_on_exist_button_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
